tempfile/bon/tests/integration/ui/compile_fail/attr_into.rs
use bon::builder;

#[builder]
fn invalid_into_false(#[builder(into = false)] _x: u32) {}

fn main() {}
